day3 test unitário

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-# Byte-compiled / optimized / DLL files
+;# Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
 *$py.class
@@ -130,3 +130,5 @@ dmypy.json
 
 # Pyre type checker
 .pyre/
+# vscode
+.vscode/
